--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,11 +64,11 @@ javac.classpath=\
     ${file.reference.servlet.jar}:\
     ${file.reference.swtgraphics2d.jar}:\
     ${file.reference.Import-lib}:\
-    ${file.reference.darcula.jar}:\
     ${file.reference.GraphicJOptionPane.jar}:\
     ${file.reference.lib-commons-io-2}:\
     ${file.reference.commons-io-2.6.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.darcula.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -89,6 +89,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -97,6 +98,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=Import
 main.class=main.Ui
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
